--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -9801,6 +9801,9 @@ body {
   align-items: center;
   justify-content: center; }
 
+.text-center {
+  text-align: center; }
+
 a.donate {
   height: 56px;
   width: 126px;
@@ -9837,9 +9840,6 @@ a.more:hover {
   letter-spacing: 1.5px;
   padding: 5px 10px 2px;
   margin-bottom: 30px; }
-
-article {
-  text-align: center; }
 
 .entry-header .entry-title {
   color: white;
