--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -380,17 +380,15 @@ section.donate {
 	color: white;
 	background-color: #252525;
 	.footer-social-media {
-		padding: 1rem;
-	}
-	.footer-social-media-box {
-		border-style: solid;
+		padding-top: 1rem;
+		padding-left: 2rem;
 	}
 	.footer-links {
 		margin-top: 4rem;
 	}
 	.footer-link {
 		font-family: BebasNeue;
-		font-size: 34px;
+		font-size: 25px;
 		//font-style: normal;
 		//font-stretch: normal;
 		line-height: 1;
