--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -374,6 +374,7 @@ section.donate {
 /* Page-specific styling */
 @import "front_page";
 @import "landing_page";
+@import "about_page";
 
 /* Footer */
 .site-footer {
