changed footer to have same padding as blog, and aligned address in footer to be closer to the right to look like designs

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -10279,6 +10279,7 @@ section.volunteer-hero {
 
 /* Footer */
 .site-footer {
+  padding: 0 120px;
   color: white;
   background-color: #252525; }
   .site-footer .footer-social-media {
