--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -378,6 +378,7 @@ section.donate {
 
 /* Footer */
 .site-footer {
+	padding: 0 120px;
 	color: white;
 	background-color: #252525;
 	.footer-social-media {
