--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -9759,6 +9759,14 @@ a.skip-link {
   src: url("../fonts/BebasNeue-Regular.woff2") format("woff2"), url("../fonts/BebasNeue-Regular.woff") format("woff"), url("../fonts/BebasNeue-Regular.ttf") format("truetype"); }
 
 @font-face {
+  font-family: BebasNeueThin;
+  src: url("../fonts/BebasNeue Thin.ttf") format("truetype"); }
+
+@font-face {
+  font-family: BebasNeueLight;
+  src: url("../fonts/BebasNeue Light.ttf") format("truetype"); }
+
+@font-face {
   font-family: GothicA1;
   src: url("../fonts/GothicA1-Regular.ttf") format("truetype"); }
 
@@ -10259,6 +10267,38 @@ section.quote {
       letter-spacing: 1.6px;
       text-transform: uppercase; }
 
+section.adventure {
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 4rem; }
+  section.adventure div.container div#adventure-header p {
+    font-family: BebasNeueLight;
+    text-align: center;
+    font-size: 56px;
+    letter-spacing: 1.75px;
+    font-weight: 100;
+    font-style: normal;
+    font-stretch: normal; }
+    section.adventure div.container div#adventure-header p strong {
+      color: #d41c53;
+      font-family: BebasNeue; }
+  section.adventure div.container div#adventure-text p {
+    font-family: GothicA1;
+    font-size: 24px;
+    line-height: 1.5;
+    text-align: center;
+    letter-spacing: normal; }
+
+section.steps {
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto; }
+  section.steps div.steps-header {
+    font-family: BebasNeue;
+    font-size: 18px;
+    padding: 5px 0px; }
+
 section.volunteer-hero {
   background-image: url("../img/volunteer-today.jpg");
   /* Set a specific height */
@@ -10279,7 +10319,7 @@ section.volunteer-hero {
 
 /* Footer */
 .site-footer {
-  padding: 0 120px;
+  padding: 0px 120px;
   color: white;
   background-color: #252525; }
   .site-footer .footer-social-media {
